# python-server-sdk-ai

./: .readthedocs.yml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROVENANCE.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/build-docs/: action.yml
.github/actions/ci/: action.yml
.github/workflows/: ci.yml  manual-publish.yml  release-please.yml
docs/: README.md  api-main.rst  conf.py
ldai/: __init__.py  client.py  models.py  tracker.py  tracking_utils.py  types.py
ldai/chat/: __init__.py  tracked_chat.py
ldai/judge/: __init__.py  ai_judge.py  evaluation_schema_builder.py
ldai/providers/: __init__.py  ai_provider.py  ai_provider_factory.py  types.py
ldai/providers/langchain/: __init__.py
ldai/testing/: test_agents.py  test_langchain_provider.py  test_model_config.py  test_tracker.py
