# Root pyproject.toml for the LaunchDarkly Python AI SDK monorepo
#
# This monorepo contains:
# - packages/sdk/server-ai: The main LaunchDarkly Server-Side AI SDK
# - packages/ai-providers/server-ai-langchain: LangChain integration (placeholder)
#
# For development, use the package-specific pyproject.toml files in:
# - packages/sdk/server-ai/pyproject.toml
# - packages/ai-providers/server-ai-langchain/pyproject.toml

[tool.poetry]
name = "launchdarkly-python-sdk-ai-monorepo"
version = "0.0.0"
description = "LaunchDarkly Python AI SDK Monorepo"
authors = ["LaunchDarkly <dev@launchdarkly.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
